# blog

./: .gitignore  Cargo.toml  config.toml  justfile  netlify.toml
in/: actuality-films.md  based.md  cabal.md  decentralize-messaging.md  declarative-programming.md  delinearization.md  exchange-traded-mutant.html  fractal.md  index.scss  intermodal.md  iota.adoc  jumble.html  kademlion.md  lightning-exchange.adoc  mushrooms.md  new-rustacean-resources.md  on-feedback-loops.md  parsing.md  popcorn-time-should-become-a-browser.md  structural-heterogeneity.md  the-stack.md  transcript.md  unix-utilities-in-rust-for-great-success.md
src/: common.rs  content.rs  error.rs  filters.rs  frontmatter.rs  fs.rs  index.rs  item.rs  item_kind.rs  main.rs  markup.rs  opt.rs  post.rs  slug.rs  tag.rs
templates/: index.html
www/blog/: feed.xml  index.css  index.html
www/blog/actuality-films/: index.html
www/blog/based/: index.html
www/blog/cabal/: index.html
www/blog/decentralize-messaging/: index.html
www/blog/declarative-programming/: index.html
www/blog/delinearization/: index.html
www/blog/exchange-traded-mutant/: index.html
www/blog/fractal/: index.html
www/blog/intermodal/: index.html
www/blog/iota/: index.html
www/blog/jumble/: index.html
www/blog/kademlion/: index.html
www/blog/lightning-exchange/: index.html
www/blog/mushrooms/: index.html
www/blog/new-rustacean-resources/: index.html
www/blog/on-feedback-loops/: index.html
www/blog/parsing/: index.html
www/blog/popcorn-time-should-become-a-browser/: index.html
(+9 files in other folders)
